# arc

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: Features.cmake
docs/: common-gotchas.md  index.md  pollables.md
examples/: CMakeLists.txt  common.hpp  custom_pollables.cpp  exceptions.cpp  iocp_test.cpp  task_local.cpp  tcp_client.cpp  tcp_echo_server.cpp
include/arc/: Interval.hpp  Join.hpp  Mutex.hpp  Runtime.hpp  Semaphore.hpp  Sleep.hpp  Task.hpp  TimeDriver.hpp  Util.hpp  Yield.hpp  mpsc.hpp  prelude.hpp
include/arc/future/: Context.hpp  Future.hpp  Join.hpp  Pollable.hpp  PollableMetadata.hpp  Promise.hpp  Select.hpp  UtilPollables.hpp
include/arc/iocp/: IocpMisc.hpp  IocpPipe.hpp
include/arc/net/: EventIoBase.hpp  TcpListener.hpp  TcpStream.hpp  UdpSocket.hpp
include/arc/runtime/: IoDriver.hpp  IocpDriver.hpp  Main.hpp  Runtime.hpp  SignalDriver.hpp  TimeDriver.hpp
include/arc/signal/: Signal.hpp
include/arc/sync/: ChannelBase.hpp  Mutex.hpp  Notify.hpp  Semaphore.hpp  mpsc.hpp  oneshot.hpp
include/arc/task/: BlockingTask.hpp  CancellationToken.hpp  CondvarWaker.hpp  Context.hpp  Task.hpp  TaskLocal.hpp  WaitList.hpp  Waker.hpp  Yield.hpp
include/arc/time/: Interval.hpp  Sleep.hpp  Timeout.hpp
include/arc/util/: Assert.hpp  Config.hpp  ConstexprString.hpp  Function.hpp  ManuallyDrop.hpp  MaybeUninit.hpp  Pin.hpp  Random.hpp  Result.hpp  ScopeDtor.hpp  Trace.hpp
src/: Interval.cpp  Runtime.cpp  Semaphore.cpp  Sleep.cpp  TimeDriver.cpp  Util.cpp  Yield.cpp
src/future/: Context.cpp  Pollable.cpp
src/net/: EventIoBase.cpp  TcpListener.cpp  TcpStream.cpp  UdpSocket.cpp
src/runtime/: IoDriver.cpp  Iocp.cpp  IocpDriver.cpp  Runtime.cpp  SignalDriver.cpp  TimeDriver.cpp
src/signal/: Signal.cpp
src/sync/: Notify.cpp  Semaphore.cpp
src/task/: CancellationToken.cpp  Context.cpp  Task.cpp  TaskLocal.cpp  Waker.cpp  Yield.cpp
src/time/: Interval.cpp  Sleep.cpp
test/: Future.cpp  Join.cpp  MPSC.cpp  Notify.cpp  Oneshot.cpp  Pollable.cpp  Runtime.cpp  Select.cpp  Semaphore.cpp  Task.cpp  main.cpp  mpsc.cpp  oneshot.cpp  time.cpp
